--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
     <script src="./js/modal.js"></script>
     <script src="./js/search.js"></script>
     <script src="./js/products-anim.js"></script>
+    <script src="./js/home.js"></script>
   </head>
 
   <body>
+    <div id="confirmation-overlay" style="display: none">
+      <div id="confirmation-message" style="display: none">
+        <h2>Comanda a fost plasată cu succes!</h2>
+        <p>
+          Vă mulțumim că ați cumpărat de la noi. Vă rugăm să așteptați
+          confirmarea comenzii prin e-mail.
+        </p>
+      </div>
+    </div>
     <div class="modal">
       <div class="inner-container">
         <div class="content">
