Am stilizat si adaugat functionalitati pentru signin-signout si search

--- a/productlist.html
+++ b/productlist.html
@@ -163,43 +163,47 @@
         </div>
         <div class="cards">
           <div class="card">
-            <img loading="lazy" src="./images/p1.png" alt="coffee" />
+            <img
+              loading="lazy"
+              src="./images/coming-soon-product.png"
+              alt="coffee"
+            />
             <div>
-              <h3>Gran Espresso</h3>
-              <p>
-                Light and flavorful blend with cocoa and black pepper for an
-                intense experience
-              </p>
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
           <div class="card">
-            <img loading="lazy" src="./images/p2.png" alt="coffee" />
+            <img
+              loading="lazy"
+              src="./images/coming-soon-product.png"
+              alt="coffee"
+            />
             <div>
-              <h3>Planalto</h3>
-              <p>
-                Brazilian dark roast with rich and velvety body, and hints of
-                fruits and nuts
-              </p>
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
           <div class="card">
-            <img loading="lazy" src="./images/p3.png" alt="coffee" />
+            <img
+              loading="lazy"
+              src="./images/coming-soon-product.png"
+              alt="coffee"
+            />
             <div>
-              <h3>Piccollo</h3>
-              <p>
-                Mild and smooth blend featuring notes of toasted almond and
-                dried cherry
-              </p>
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
           <div class="card">
-            <img loading="lazy" src="./images/p4.png" alt="coffee" />
+            <img
+              loading="lazy"
+              src="./images/coming-soon-product.png"
+              alt="coffee"
+            />
             <div>
-              <h3>Danche</h3>
-              <p>
-                Ethiopian hand-harvested blend densely packed with vibrant fruit
-                notes
-              </p>
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
         </div>
