--- a/subscribe.html
+++ b/subscribe.html
@@ -102,7 +102,7 @@
       </nav>
       <section class="hero">
         <div>
-          <h2>Create plan</h2>
+          <h2>Create a plan</h2>
           <p>
             Coffee the way you wanted it to be. For coffee delivered tomorrow,
             or next week. For whatever brew method you use. For choice, for
