--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           </li>
           <li>
             <input type="text" placeholder="Search..." class="search-input" />
+            <ul class="suggestions"></ul>
           </li>
           <li>
             <a href="./signin.html" class="login-btn">Login</a>
