--- a/productlist.html
+++ b/productlist.html
@@ -15,6 +15,7 @@
     <script src="./js/modal.js"></script>
     <script src="./js/productsearch.js"></script>
     <script src="./js/search.js"></script>
+
     <title>Product List</title>
   </head>
   <body>
@@ -240,5 +241,8 @@
         </div>
       </footer>
     </div>
+
+    <script src="./js/products-anim.js"></script>
+    <script src="./js/products.js"></script>
   </body>
 </html>
