--- a/subscribe.html
+++ b/subscribe.html
@@ -141,9 +141,6 @@
               </p>
             </div>
           </div>
-          <a class="action" href="./subscribe.html#create-plan">
-            Create your plan
-          </a>
         </div>
       </section>
 
@@ -321,7 +318,7 @@
                 <span class="green" id="a5">Every Week</span>.”
               </h3>
             </div>
-            <button class="action" id="create">Create my plan!</button>
+            <button class="action" id="create" disabled>Create my plan!</button>
           </div>
         </div>
       </section>
