--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
             curated artisan coffees from our best roasters delivered directly to
             your door, at your schedule.
           </p>
-          <button class="action">Create your plan</button>
+          <button class="sub-action" id="redirectButton">
+            Create your plan
+          </button>
         </div>
       </section>
 
@@ -252,7 +254,7 @@
             </p>
           </div>
         </div>
-        <button class="action">Create your plan</button>
+        <button class="sub-action" id="redirectButton">Create your plan</button>
       </section>
 
       <footer class="footer">
