--- a/productlist.html
+++ b/productlist.html
@@ -111,7 +111,9 @@
             curated artisan coffees from our best roasters delivered directly to
             your door, at your schedule.
           </p>
-          <button class="action">Create your plan</button>
+          <button class="sub-action" id="redirectButton">
+            Create your plan
+          </button>
         </div>
       </section>
 
